2006-05-20  Ethan A Merritt  <merritt@u.washington.edu>

	* share/Gnuplot.app-defaults share/Makefile.am:
	New X resources file, intended for installation in the system's
	default location for X resources.
	Bug #1376604.

2006-05-19  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_enhanced_text):
	Remove unappropriate comments about enhanced_max_height.
	(gp_cairo_end_polygon): Remove useless comment.
	(gp_cairo_convert_symbol_to_unicode): Change C++-style
	comments to C style /* ... */.
	(gp_cairo_initialize_plot): To avoid overflows, change
	strcpy() to strncpy(), strcat() to strncat() and sprintf() to
	snprintf().
	(gp_cairo_set_font): Likewise.
	(gp_cairo_add_shape): Likewise.
	(gp_cairo_enhanced_flush): Likewise.
	(gp_cairo_enhanced_open): Likewise.
	(gp_cairo_draw_enhanced_text): Likewise.

	* src/wxterminal/wxt_gui.cpp (wxt_set_font): Likewise.

	* term/wxt.trm (wxt_options): Likewise.

2006-05-18  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/Makefile.am (AUTOMAKE_OPTIONS): Remove 'subdir-objects',
	not mandatory.

	* configure.in (enable_wxwidgets): Remove test AM_PROG_CC_C_O,
	not needed now that 'subdir-objects' is not used.

	* src/wxterminal/wxt_gui.cpp (wxt_waitforinput) [_Windows]:
	Rework event processing to avoid code duplication and handle
	more cases (pause, etc.).
	(wxt_waitforinput_pause) [_Windows]: Removed.
	(wxt_terminal_events) [_Windows]: New routine to process
	pending events from the wxWidgets terminal when it is selected
	and initialized. Its return code is used to stop a pause.
	(wxt_set_font): Use reasonable defaults for font name ("Sans")
	and size (10) instead of the wxWidgets system settings. It
	avoids to choose the inappropriate Courier font on Windows,
	where it is used by the console-like window.

	* src/wxterminal/wxt_term.h (wxt_waitforinput_pause):
	Remove declaration.

	* src/wxterminal/wxt_plot.h (wxt_terminal_events):
	Declaration.
